--- a/JLT.Floorplan.Entity/JLT.Floorplan.Entity.csproj
+++ b/JLT.Floorplan.Entity/JLT.Floorplan.Entity.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Complex\buildingfloor.cs" />
     <Compile Include="Complex\seatallocation.cs" />
+    <Compile Include="Simple\building.cs" />
+    <Compile Include="Simple\floor.cs" />
     <Compile Include="Simple\emailtemplate.cs" />
     <Compile Include="Simple\config.cs" />
     <Compile Include="Simple\seatvacancy.cs" />
